python/assistant/quantgrid_2a/pseudo/generated/FormulaParser.py
# Generated from Formula.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class FormulaParser(Parser):

    grammarFileName = "Formula.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'NA'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'%'",
        "'^'",
        "'and'",
        "'or'",
        "'<'",
        "'>'",
        "'=='",
        "'<='",
        "'>='",
        "'!='",
        "'not'",
        "','",
        "':'",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "'.'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'=>'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "FLOAT",
        "IDENTIFIER",
        "QUOTED_IDENTIFIER",
        "STRING",
        "LAMBDA_ARROW",
        "WS",
    ]

    RULE_number = 0
    RULE_string = 1
    RULE_na = 2
    RULE_bin_add_sub = 3
    RULE_bin_mul_div_mod = 4
    RULE_bin_pow = 5
    RULE_bin_and = 6
    RULE_bin_or = 7
    RULE_bin_compare = 8
    RULE_uni_op = 9
    RULE_function_name = 10
    RULE_variable_name = 11
    RULE_type = 12
    RULE_parameter = 13
    RULE_input = 14
    RULE_formula = 15

    ruleNames = [
        "number",
        "string",
        "na",
        "bin_add_sub",
        "bin_mul_div_mod",
        "bin_pow",
        "bin_and",
        "bin_or",
        "bin_compare",
        "uni_op",
        "function_name",
        "variable_name",
        "type",
        "parameter",
        "input",
        "formula",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    FLOAT = 24
    IDENTIFIER = 25
    QUOTED_IDENTIFIER = 26
    STRING = 27
    LAMBDA_ARROW = 28
    WS = 29

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class NumberContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(FormulaParser.FLOAT, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_number

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNumber"):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)

    def number(self):

        localctx = FormulaParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(FormulaParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(FormulaParser.STRING, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_string

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitString"):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)

    def string(self):

        localctx = FormulaParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(FormulaParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NaContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_na

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNa"):
                return visitor.visitNa(self)
            else:
                return visitor.visitChildren(self)

    def na(self):

        localctx = FormulaParser.NaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_na)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(FormulaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bin_add_subContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_bin_add_sub

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBin_add_sub"):
                return visitor.visitBin_add_sub(self)
            else:
                return visitor.visitChildren(self)

    def bin_add_sub(self):

        localctx = FormulaParser.Bin_add_subContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bin_add_sub)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            _la = self._input.LA(1)
            if not (_la == 2 or _la == 3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bin_mul_div_modContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_bin_mul_div_mod

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBin_mul_div_mod"):
                return visitor.visitBin_mul_div_mod(self)
            else:
                return visitor.visitChildren(self)

    def bin_mul_div_mod(self):

        localctx = FormulaParser.Bin_mul_div_modContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bin_mul_div_mod)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bin_powContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_bin_pow

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBin_pow"):
                return visitor.visitBin_pow(self)
            else:
                return visitor.visitChildren(self)

    def bin_pow(self):

        localctx = FormulaParser.Bin_powContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bin_pow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(FormulaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bin_andContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_bin_and

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBin_and"):
                return visitor.visitBin_and(self)
            else:
                return visitor.visitChildren(self)

    def bin_and(self):

        localctx = FormulaParser.Bin_andContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bin_and)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(FormulaParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bin_orContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_bin_or

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBin_or"):
                return visitor.visitBin_or(self)
            else:
                return visitor.visitChildren(self)

    def bin_or(self):

        localctx = FormulaParser.Bin_orContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bin_or)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(FormulaParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bin_compareContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_bin_compare

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBin_compare"):
                return visitor.visitBin_compare(self)
            else:
                return visitor.visitChildren(self)

    def bin_compare(self):

        localctx = FormulaParser.Bin_compareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bin_compare)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not ((((_la) & ~0x3F) == 0 and ((1 << _la) & 64512) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Uni_opContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_uni_op

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitUni_op"):
                return visitor.visitUni_op(self)
            else:
                return visitor.visitChildren(self)

    def uni_op(self):

        localctx = FormulaParser.Uni_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_uni_op)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not (_la == 3 or _la == 16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_nameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(FormulaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_function_name

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunction_name"):
                return visitor.visitFunction_name(self)
            else:
                return visitor.visitChildren(self)

    def function_name(self):

        localctx = FormulaParser.Function_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(FormulaParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_nameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(FormulaParser.IDENTIFIER, 0)

        def QUOTED_IDENTIFIER(self):
            return self.getToken(FormulaParser.QUOTED_IDENTIFIER, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_variable_name

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVariable_name"):
                return visitor.visitVariable_name(self)
            else:
                return visitor.visitChildren(self)

    def variable_name(self):

        localctx = FormulaParser.Variable_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_variable_name)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not (_la == 25 or _la == 26):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(FormulaParser.IDENTIFIER, 0)

        def QUOTED_IDENTIFIER(self):
            return self.getToken(FormulaParser.QUOTED_IDENTIFIER, 0)

        def type_(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.TypeContext)
            else:
                return self.getTypedRuleContext(FormulaParser.TypeContext, i)

        def getRuleIndex(self):
            return FormulaParser.RULE_type

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitType"):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)

    def type_(self):

        localctx = FormulaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_type)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            _la = self._input.LA(1)
            if not (_la == 25 or _la == 26):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 10:
                self.state = 57
                self.match(FormulaParser.T__9)
                self.state = 58
                self.type_()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 17:
                    self.state = 59
                    self.match(FormulaParser.T__16)
                    self.state = 60
                    self.type_()
                    self.state = 65
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self.match(FormulaParser.T__10)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(FormulaParser.IDENTIFIER, 0)

        def QUOTED_IDENTIFIER(self):
            return self.getToken(FormulaParser.QUOTED_IDENTIFIER, 0)

        def type_(self):
            return self.getTypedRuleContext(FormulaParser.TypeContext, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_parameter

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParameter"):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)

    def parameter(self):

        localctx = FormulaParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_parameter)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not (_la == 25 or _la == 26):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 18:
                self.state = 71
                self.match(FormulaParser.T__17)
                self.state = 72
                self.type_()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InputContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formula(self):
            return self.getTypedRuleContext(FormulaParser.FormulaContext, 0)

        def EOF(self):
            return self.getToken(FormulaParser.EOF, 0)

        def getRuleIndex(self):
            return FormulaParser.RULE_input

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitInput"):
                return visitor.visitInput(self)
            else:
                return visitor.visitChildren(self)

    def input_(self):

        localctx = FormulaParser.InputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_input)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.formula(0)
            self.state = 76
            self.match(FormulaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormulaContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return FormulaParser.RULE_formula

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class On_indexingContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(FormulaParser.FormulaContext, 0)

        def IDENTIFIER(self):
            return self.getToken(FormulaParser.IDENTIFIER, 0)

        def QUOTED_IDENTIFIER(self):
            return self.getToken(FormulaParser.QUOTED_IDENTIFIER, 0)

        def FLOAT(self):
            return self.getToken(FormulaParser.FLOAT, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_indexing"):
                return visitor.visitOn_indexing(self)
            else:
                return visitor.visitChildren(self)

    class On_stringContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def string(self):
            return self.getTypedRuleContext(FormulaParser.StringContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_string"):
                return visitor.visitOn_string(self)
            else:
                return visitor.visitChildren(self)

    class On_parenthesesContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self):
            return self.getTypedRuleContext(FormulaParser.FormulaContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_parentheses"):
                return visitor.visitOn_parentheses(self)
            else:
                return visitor.visitChildren(self)

    class On_member_functionContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def function_name(self):
            return self.getTypedRuleContext(FormulaParser.Function_nameContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_member_function"):
                return visitor.visitOn_member_function(self)
            else:
                return visitor.visitChildren(self)

    class On_listContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_list"):
                return visitor.visitOn_list(self)
            else:
                return visitor.visitChildren(self)

    class On_orContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def bin_or(self):
            return self.getTypedRuleContext(FormulaParser.Bin_orContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_or"):
                return visitor.visitOn_or(self)
            else:
                return visitor.visitChildren(self)

    class On_mul_div_modContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def bin_mul_div_mod(self):
            return self.getTypedRuleContext(FormulaParser.Bin_mul_div_modContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_mul_div_mod"):
                return visitor.visitOn_mul_div_mod(self)
            else:
                return visitor.visitChildren(self)

    class On_compareContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def bin_compare(self):
            return self.getTypedRuleContext(FormulaParser.Bin_compareContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_compare"):
                return visitor.visitOn_compare(self)
            else:
                return visitor.visitChildren(self)

    class On_andContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def bin_and(self):
            return self.getTypedRuleContext(FormulaParser.Bin_andContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_and"):
                return visitor.visitOn_and(self)
            else:
                return visitor.visitChildren(self)

    class On_lambdaContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LAMBDA_ARROW(self):
            return self.getToken(FormulaParser.LAMBDA_ARROW, 0)

        def formula(self):
            return self.getTypedRuleContext(FormulaParser.FormulaContext, 0)

        def parameter(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.ParameterContext)
            else:
                return self.getTypedRuleContext(FormulaParser.ParameterContext, i)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_lambda"):
                return visitor.visitOn_lambda(self)
            else:
                return visitor.visitChildren(self)

    class On_global_functionContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function_name(self):
            return self.getTypedRuleContext(FormulaParser.Function_nameContext, 0)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_global_function"):
                return visitor.visitOn_global_function(self)
            else:
                return visitor.visitChildren(self)

    class On_naContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def na(self):
            return self.getTypedRuleContext(FormulaParser.NaContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_na"):
                return visitor.visitOn_na(self)
            else:
                return visitor.visitChildren(self)

    class On_powContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def bin_pow(self):
            return self.getTypedRuleContext(FormulaParser.Bin_powContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_pow"):
                return visitor.visitOn_pow(self)
            else:
                return visitor.visitChildren(self)

    class On_add_subContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def formula(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(FormulaParser.FormulaContext)
            else:
                return self.getTypedRuleContext(FormulaParser.FormulaContext, i)

        def bin_add_sub(self):
            return self.getTypedRuleContext(FormulaParser.Bin_add_subContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_add_sub"):
                return visitor.visitOn_add_sub(self)
            else:
                return visitor.visitChildren(self)

    class On_variableContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variable_name(self):
            return self.getTypedRuleContext(FormulaParser.Variable_nameContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_variable"):
                return visitor.visitOn_variable(self)
            else:
                return visitor.visitChildren(self)

    class On_numberContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def number(self):
            return self.getTypedRuleContext(FormulaParser.NumberContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOn_number"):
                return visitor.visitOn_number(self)
            else:
                return visitor.visitChildren(self)

    class On_unaryContext(FormulaContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a FormulaParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def uni_op(self):
            return self.getTypedRuleContext(FormulaParser.Uni_opContext, 0)

        def formula(self):
            return self.getTypedRuleContext(FormulaParser.FormulaContext, 0)
